--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
+    "type": "module",
     "scripts": {
+        "build": "tsc",
         "format": "prettier --write ./src",
         "lint": "eslint ./src"
     },
     "devDependencies": {
         "@eslint/js": "^9.33.0",
+        "@types/express": "^5.0.5",
+        "@types/node": "^24.10.1",
         "eslint": "^9.33.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-unicorn": "^60.0.0",
         "globals": "^16.3.0",
         "prettier": "^3.6.2"
+    },
+    "dependencies": {
+        "@paralleldrive/cuid2": "^3.0.4",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "pokedex-promise-v2": "^4.2.1",
+        "redis": "^5.10.0",
+        "typescript": "^5.9.3",
+        "zod": "^4.1.12"
     }
 }
