--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "@eslint/js": "^9.33.0",
         "@types/express": "^5.0.5",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.1",
         "eslint": "^9.33.0",
         "eslint-config-prettier": "^10.1.8",
