--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 # Be sure to add your variables in your .env file here, and be sure this file gets pushed to your remote repo!
+JWT_TOKEN_SECRET = ...
